[project]
name = "recipe-converter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Jonas Ehrlich", email = "jonas.ehrlich@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "pydantic>=2.10.4",
]

[project.scripts]
recipe-converter = "recipe_converter.cli:convert"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
